posts-microservices-app/infra/k8s/posts-srv.yml
apiVersion: v1
kind: Service
metadata:
    name: posts-srv
spec:
    type: NodePort
    selector:
        app: posts
    ports:
        - name: posts
          protocol: TCP
          port: 8000
          targetPort: 8000
